--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 
 <body>
 
-  <h1>Dude State Tracks </h1>
-
-  <p>Larns a lizard.</p>
+  <!--<h1>Dude State Tracks </h1>-->
+  <a href="stockadestormers.com"><li>Home</li></a>
+  <a href="stockadestormers.com/game"><li>Play now</li></a>
+  <a href="stockadestormers.com/about"><li>About SS</li></a>
+  
+  <!--<p>Larns a lizard.</p>-->
 
 </body>
 
