--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
 <body>
 
-  <!--<h1>Dude State Tracks </h1>-->
-  <a href="stockadestormers.com"><li>Home</li></a>
-  <a href="stockadestormers.com/game"><li>Play now</li></a>
-  <a href="stockadestormers.com/about"><li>About SS</li></a>
-  
-  <!--<p>Larns a lizard.</p>-->
-
+ 
+  <a href="stockadestormers.com"><img src ="http://i.imgur.com/HQwrkxT.png"></a>
+  <ul>
+    <a href="stockadestormers.com"><li>Home</li></a>
+    <a href="stockadestormers.com/game"><li>Play now</li></a>
+    <a href="stockadestormers.com/about"><li>About SS</li></a>
+  </ul>
+ 
 </body>
 
 </html>
