--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <a href="stockadestormers.com"><img src ="http://i.imgur.com/HQwrkxT.png"></a>
   <title>Stockade Stormers</title>
-  <link rel="stylesheet" type="text/css" href="Style.css">
+  Stockade Stormers
 </head>
 
 <body>
 
  
-  <a href="stockadestormers.com"><img src ="http://i.imgur.com/HQwrkxT.png"></a>
+ 
   <ul>
     <a href="stockadestormers.com"><li>Home</li></a>
     <a href="stockadestormers.com/game"><li>Play now</li></a>
